# tpop3d

./: CHANGES  COPYING.EXCEPTION  CREDITS  FAQ  HACKING  INSTALL  Makefile  Makefile.am  Makefile.original  PORTABILITY  README  README.POP-before-SMTP  README.auth_cdb  README.auth_mysql  README.bulletins  README.darwin  README.md  TODO  acinclude.m4  auth_cdb.c  auth_cdb.h  auth_flatfile.c  auth_flatfile.h  auth_gdbm.c  auth_gdbm.h  auth_ldap.c  auth_ldap.h  auth_mysql.c  auth_mysql.h  auth_other.c  auth_other.h  auth_pam.c  auth_pam.h  auth_passwd.c  auth_passwd.h  auth_perl.c  auth_perl.h  auth_pgsql.c  auth_pgsql.h  authcache.c  (+61 more)
TPOP3D-AuthDriver/: AuthDriver.pm  Changes  MANIFEST  Makefile.PL  test.pl
config/: Makefile.am  check_lib2.m4  flock-uses-fcntl.c
darwin/: README  StartupParameters.plist  tpop3d  tpop3d.conf.example
darwin/TPOP3D/: StartupParameters.plist  TPOP3D
debian/: README.Debian  changelog  conffiles  control  copyright  ex.doc-base.package  files  postinst.debhelper  postinst.ex  postrm.debhelper  postrm.ex  preinst.ex  prerm.debhelper  prerm.ex  rules  substvars  tpop3d.conf  tpop3d.init
init.d/: Makefile.am  initscript-mysql.patch  initscript_wait-for-mysqld.patch  tpop3d  tpop3d.sh
scripts/: authdbm  bulletins  dotapopfile  flat_file  nasty  oraclevmail  relaydbm  ruby-sample  tpop3dtraffic
